página de cadastro atualizada

--- a/cadastro/cadastro.css
+++ b/cadastro/cadastro.css
@@ -322,7 +322,7 @@ i {
   height: 20px;
 }
 
-.footer-container_copy .m-b-footer {
+/* .footer-container_copy .m-b-footer {
   margin-bottom: 0.5em;
 }
 
@@ -343,4 +343,4 @@ i {
   font-size: 0.96em;
   margin-right: 3px;
   color: #e82626;
-}
+} */
