--- a/carrinho/carrinho.css
+++ b/carrinho/carrinho.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
     font-family: "Montserrat", sans-serif;
   }
+  .imageSubtitle{
+    border: solid blue;
+    display: flex;
+    align-items: center;
+    padding-right: 10rem;
+  }
 
   header {
     background-color: #27273f;
@@ -162,6 +168,15 @@ main{
     display: flex;
     flex-wrap: wrap;
     justify-content: end;
+}
+input[id^="qtdProduto"] {
+  width: 3.125rem;
+  text-align: center;
+  border: none;
+  background-color: #cecece;
+  padding: 5px;
+  font-size: 16px;
+  caret-color: transparent; 
 }
 
 .priceInformations > div:first-of-type{
